src/styles/styles.scss
@import "colors";
@import "font-variables";
@import "font-styles";
@import "info-box-styles";
@import "table-styles";
@import "border-styles";
@import "flex-styles";
@import "lengths";

// Utilities

.m-auto {
  margin: auto !important;
}

@each $name, $color in $colors {
  .border-#{$name} {
    border-color: $color !important;
  }

  .color-#{$name} {
    color: $color !important;
  }

  .bg-#{$name} {
    background-color: $color !important;
  }

  .font-#{$name} {
    color: $color !important;
  }
}

$spacer: 0.25rem;
@for $i from 1 through 20 {
  .m-#{$i} {
    margin: ($i * $spacer) !important;
  }

  .p-#{$i} {
    padding: ($i * $spacer) !important;
  }

  .mt-#{$i} {
    margin-top: ($i * $spacer) !important;
  }

  .pt-#{$i} {
    padding-top: ($i * $spacer) !important;
  }

  .mr-#{$i} {
    margin-right: ($i * $spacer) !important;
  }

  .pr-#{$i} {
    padding-right: ($i * $spacer) !important;
  }

  .mb-#{$i} {
    margin-bottom: ($i * $spacer) !important;
  }

  .pb-#{$i} {
    padding-bottom: ($i * $spacer) !important;
  }

  .ml-#{$i} {
    margin-left: ($i * $spacer) !important;
  }

  .pl-#{$i} {
    padding-left: ($i * $spacer) !important;
  }
}

.mb-0 {
  margin-bottom: 0 !important;
}

.mr-0 {
  margin-right: 0 !important;;
}

.pr-0 {
  padding-right: 0 !important;;
}

.ml-p40 {
  margin-left: 40px !important;
}

.h-100 {
  height: 100%;
}


// End utilities

body {
  padding: 0;
  margin: 0;
  background-color: $light-gray;
}

.page {
  margin: 40px 40px 40px 40px;

  .page-header {
    width: 100%;

    .page-links {
      margin-bottom: 15px;
    }

    .page-title {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }

  .page-title-text {
    font-family: 'Proxima Nova Regular', sans-serif;
    font-size: 30px;
    color: $primary;
  }
}

.op-h1 {
  font-size: 30px;
  font-family: 'Proxima Nova Regular', sans-serif;
  color: $primary;
}

.op-h2 {
  font-size: 24px;
  font-family: 'Proxima Nova Regular', sans-serif;
  color: $primary;
}

.dialog {
  margin: 35px 50px;
}

a {
  color: black;
}

.w-0 {
  width: 0 !important;
}

.w-50 {
  width: 50% !important;
}

.w-100 {
  width: 100% !important;
}

.wp-400 {
  width: 400px !important;
}

.h-1 {
  height: 1px;
}

.divider {
  border-style: solid;
}

.m-w-standard {
  max-width: 1050px;
}

.w-standard {
  width: 1050px;
}

.m-w-large {
  max-width: 1200px;
}

.m-w-xlarge {
  max-width: 1400px;
}

.op-rounded {
  border-radius: $cornerRadiusSmall !important;
}

.op-rounded-regular {
  border-radius: $cornerRadiusRegular !important;
}

.op-round-bottom {
  border-bottom-left-radius: $cornerRadiusSmall !important;
  border-bottom-right-radius: $cornerRadiusSmall !important;
}

.op-button {
  height: 44px;
  text-transform: uppercase;

  .mat-button-wrapper {
    line-height: 44px;
    font-size: 16px;
    display: flex;
    align-items: center;
  }
}

.op-expansion-panel.mat-expansion-panel:not([class*='mat-elevation-z']) {
  box-shadow: none;
}

.op-select .mat-form-field-outline {
  background-color: white;
}

.link-button {
  color: $primary;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  font-size: $fontRegular;
  font-family: $fontProximaBold;

  &:visited {
    color: $primary;
    font-weight: bold;
    text-decoration: none;
    text-transform: uppercase;
    font-size: $fontRegular;
  }

  &:hover {
    cursor: pointer;
  }

  &.mat-button {
    mat-icon {
      vertical-align: baseline !important;
    }
  }
}

// Visibility

.visible {
  visibility: visible !important;
}

.hidden {
  visibility: hidden !important;
}


// Font

.bold {
  font-weight: bold;
}

.text-left {
  text-align: left !important;
}

.text-right {
  text-align: right !important;
}

.text-center {
  text-align: center !important;
}

.op-back-link {
  color: $medium-gray;
  font-size: 16px;
  font-family: 'Roboto', sans-serif;

  &:visited {
    color: $medium-gray;
  }

  i {
    margin-right: 6px;
  }
}

.header-text {
  color: $primary;
  font-size: 30px;
  font-family: $fontProxima;
}

.header-2-text {
  color: $primary;
  font-size: 24px;
  font-family: $fontProxima;
}

.header-3-text {
  color: $primary;
  font-size: 20px;
  font-family: $fontProxima;
}

.hide-overflow {
  overflow: hidden;
}

.scroll-overflow {
  overflow: scroll;
}

@mixin op-selected-box($padding:0, $border-width: 2px) {
  @include op-border();
  padding: $padding;
  border-color: $primary;
  border-width: $border-width;
  background-color: $primary-light;
}

.cancel-button {
  text-transform: uppercase !important;
}

.mat-form-white-outline {
  &.mat-form-field-appearance-outline {
    .mat-form-field-outline {
      color: white;
    }

    &.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
      color: white;
    }
  }
}

.help-link {
  font-family: $fontRoboto;
  font-size: $fontSmallRegular;
}

.no-background {
  background-color: transparent !important;
}


mat-tab-group.no-bottom-border .mat-tab-header {
  border-bottom: none !important;;
}


.op-form {
  @include op-info-box-base();

  .header {
    font-family: $fontProxima;
    font-size: $fontLarger;
    color: $primary;
    margin-bottom: 10px;
  }
}

.match-nav-select {
  width: 108px;
}

button.add-environment-variable {
  height: 44px;
  border: 2px solid $primary;

  &.mat-stroked-button:not([disabled]) {
    border-color: unset;
  }
}

button.vertical-align-icon {
  .mat-button-wrapper {
    mat-icon {
      vertical-align: text-top !important;
    }
  }
}

.underline {
  text-decoration: underline;
}

.pointer-hover {
  &:hover {
    cursor: pointer;
  }
}

.underline-hover {
  &:hover {
    text-decoration: underline;
  }
}

.underline {
  text-decoration: underline;
}

button.logout {
  font-size: $fontSmall;
  font-family: $fontRobotoBold;

  &.mat-stroked-button:not([disabled]) {
    border-color: $white;
    border-width: 2px;
  }
}


.mat-form-field-appearance-outline .mat-form-field-label {
  top: 1.7em !important;
}

.fix-mat-overflow {
  .mat-form-field-label-wrapper {
    overflow: visible;
  }
}

.shadow {
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important
}

